# AxMarshal

./: CMakeLists.txt  README.md  run.sh  test.sh
axm/: Bin.cc  Bin.h  CMakeLists.txt  FromBinary.cc  FromBinary.h  Json.cc  Json.h  ToBinary.cc  ToBinary.h  axm.h  defines.h  from_binary.cc  from_binary.h  to_binary.cc  to_binary.h  to_json.cc  to_json.h
axmc/: CMakeLists.txt  Compiler.cc  main.cc
axmc/BackEnd/: BackEnd.cc  BackEnd.h  HdrGen.cc  HdrGen.h  Header.cc  Source.cc  SrcGen.cc  SrcGen.h
axmc/File/: File.cc  File.h
axmc/FrontEnd/: BasicType.cc  BasicType.h  FrontEnd.h  Lexer.cc  Lexer.h  Parser.cc  Parser.h
test/: CMakeLists.txt  Def.cc  Def.h  Def.txt  test.cc  test_array.cc  test_class.cc  test_enum.cc  test_pointer.cc  test_var_ints.cc
